--- a/.gitignore
+++ b/.gitignore
@@ -1,162 +1,155 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+import random
+from math import sin, cos, pi, log
+from tkinter import *
 
-# C extensions
-*.so
+CANVAS_WIDTH = 640  
+CANVAS_HEIGHT = 480  
+CANVAS_CENTER_X = CANVAS_WIDTH / 2  
+CANVAS_CENTER_Y = CANVAS_HEIGHT / 2  
+IMAGE_ENLARGE = 11  
+HEART_COLOR = "#f76070"  
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+def heart_function(t, shrink_ratio: float = IMAGE_ENLARGE):
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+    x = 16 * (sin(t) ** 3)
+    y = -(13 * cos(t) - 5 * cos(2 * t) - 2 * cos(3 * t) - cos(4 * t))
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+    x *= shrink_ratio
+    y *= shrink_ratio
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+ 
+    x += CANVAS_CENTER_X
+    y += CANVAS_CENTER_Y
 
-# Translations
-*.mo
-*.pot
+    return int(x), int(y)
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
 
-# Flask stuff:
-instance/
-.webassets-cache
+def scatter_inside(x, y, beta=0.15):
 
-# Scrapy stuff:
-.scrapy
+    ratio_x = - beta * log(random.random())
+    ratio_y = - beta * log(random.random())
 
-# Sphinx documentation
-docs/_build/
+    dx = ratio_x * (x - CANVAS_CENTER_X)
+    dy = ratio_y * (y - CANVAS_CENTER_Y)
 
-# PyBuilder
-.pybuilder/
-target/
+    return x - dx, y - dy
 
-# Jupyter Notebook
-.ipynb_checkpoints
 
-# IPython
-profile_default/
-ipython_config.py
+def shrink(x, y, ratio):
+ 
+    force = -1 / (((x - CANVAS_CENTER_X) ** 2 + (y - CANVAS_CENTER_Y) ** 2) ** 0.6)  
+    dx = ratio * force * (x - CANVAS_CENTER_X)
+    dy = ratio * force * (y - CANVAS_CENTER_Y)
+    return x - dx, y - dy
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+def curve(p):
+  
+    return 2 * (2 * sin(4 * p)) / (2 * pi)
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
 
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/latest/usage/project/#working-with-version-control
-.pdm.toml
-.pdm-python
-.pdm-build/
+class Heart:
+  
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
+    def __init__(self, generate_frame=20):
+        self._points = set()  
+        self._edge_diffusion_points = set()  
+        self._center_diffusion_points = set()  
+        self.all_points = {}  
+        self.build(2000)
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
+        self.random_halo = 1000
 
-# SageMath parsed files
-*.sage.py
+        self.generate_frame = generate_frame
+        for frame in range(generate_frame):
+            self.calc(frame)
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+    def build(self, number):
+    
+        for _ in range(number):
+            t = random.uniform(0, 2 * pi)  
+            x, y = heart_function(t)
+            self._points.add((x, y))
 
-# Spyder project settings
-.spyderproject
-.spyproject
+       
+        for _x, _y in list(self._points):
+            for _ in range(3):
+                x, y = scatter_inside(_x, _y, 0.05)
+                self._edge_diffusion_points.add((x, y))
 
-# Rope project settings
-.ropeproject
+    
+        point_list = list(self._points)
+        for _ in range(4000):
+            x, y = random.choice(point_list)
+            x, y = scatter_inside(x, y, 0.17)
+            self._center_diffusion_points.add((x, y))
 
-# mkdocs documentation
-/site
+    @staticmethod
+    def calc_position(x, y, ratio):
+        
+        force = 1 / (((x - CANVAS_CENTER_X) ** 2 + (y - CANVAS_CENTER_Y) ** 2) ** 0.520)  # 魔法参数
 
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
+        dx = ratio * force * (x - CANVAS_CENTER_X) + random.randint(-1, 1)
+        dy = ratio * force * (y - CANVAS_CENTER_Y) + random.randint(-1, 1)
 
-# Pyre type checker
-.pyre/
+        return x - dx, y - dy
 
-# pytype static type analyzer
-.pytype/
+    def calc(self, generate_frame):
+        ratio = 10 * curve(generate_frame / 10 * pi)  
 
-# Cython debug symbols
-cython_debug/
+        halo_radius = int(4 + 6 * (1 + curve(generate_frame / 10 * pi)))
+        halo_number = int(3000 + 4000 * abs(curve(generate_frame / 10 * pi) ** 2))
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+        all_points = []
+
+      
+        heart_halo_point = set()  
+        for _ in range(halo_number):
+            t = random.uniform(0, 2 * pi)  
+            x, y = heart_function(t, shrink_ratio=11.6)  
+            x, y = shrink(x, y, halo_radius)
+            if (x, y) not in heart_halo_point:
+           
+                heart_halo_point.add((x, y))
+                x += random.randint(-14, 14)
+                y += random.randint(-14, 14)
+                size = random.choice((1, 2, 2))
+                all_points.append((x, y, size))
+
+  
+        for x, y in self._points:
+            x, y = self.calc_position(x, y, ratio)
+            size = random.randint(1, 3)
+            all_points.append((x, y, size))
+
+      
+        for x, y in self._edge_diffusion_points:
+            x, y = self.calc_position(x, y, ratio)
+            size = random.randint(1, 2)
+            all_points.append((x, y, size))
+
+        for x, y in self._center_diffusion_points:
+            x, y = self.calc_position(x, y, ratio)
+            size = random.randint(1, 2)
+            all_points.append((x, y, size))
+
+        self.all_points[generate_frame] = all_points
+
+    def render(self, render_canvas, render_frame):
+        for x, y, size in self.all_points[render_frame % self.generate_frame]:
+            render_canvas.create_rectangle(x, y, x + size, y + size, width=0, fill=HEART_COLOR)
+
+
+def draw(main: Tk, render_canvas: Canvas, render_heart: Heart, render_frame=0):
+    render_canvas.delete('all')
+    render_heart.render(render_canvas, render_frame)
+    main.after(160, draw, main, render_canvas, render_heart, render_frame + 1)
+
+
+if __name__ == '__main__':
+    root = Tk()  
+    canvas = Canvas(root, bg='black', height=CANVAS_HEIGHT, width=CANVAS_WIDTH)
+    canvas.pack()
+    heart = Heart()  
+    draw(root, canvas, heart)  
+    root.mainloop()
